src/network_policies/test1monitoring-fluidos-consumer-1eb36fecfd6506ed3a85ddaf1d7e51066e9a4caf8512efbcd6128de1ab6d5b643f82c9 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1monitoring-fluidos-consumer-1eb36fecfd6506ed3a85ddaf1d7e51066e9a4caf8512efbcd6128de1ab6d5b643f82c9
  namespace: monitoring-fluidos-consumer-1eb36f
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default-fluidos-consumer-1eb36f
      podSelector:
        matchLabels:
          app: product-catalogue
